# sonic-buildimage

./: .gitignore  .gitmodules  Makefile  Makefile.work  build_debian.sh  slave.mk
dockers/docker-base-bookworm/: Dockerfile.j2
dockers/docker-base-buster/: Dockerfile.j2
dockers/docker-base-stretch/: Dockerfile.j2
dockers/docker-database/: Dockerfile.j2  manifest.json.j2  manifest.yml  manifest.yml.j2  supervisord.conf.j2
dockers/docker-dhcp-relay/: manifest.yml  manifest.yml.j2
dockers/docker-fpm-frr/: Dockerfile.j2  bgpd.conf.j2  docker_init.sh  manifest.json.j2  manifest.yml  manifest.yml.j2
dockers/docker-fpm-gobgp/: Dockerfile.j2  manifest.json.j2  manifest.yml  manifest.yml.j2
dockers/docker-fpm-quagga/: Dockerfile.j2  manifest.json.j2  manifest.yml  manifest.yml.j2
dockers/docker-iccpd/: Dockerfile.j2  manifest.yml  manifest.yml.j2
dockers/docker-lldp/: Dockerfile.j2  manifest.json.j2  manifest.yml  manifest.yml.j2
dockers/docker-nat/: Dockerfile.j2  manifest.yml  manifest.yml.j2
dockers/docker-orchagent/: Dockerfile.j2  manifest.json.j2  manifest.yml  manifest.yml.j2  orchagent.py  orchagent.sh  (+1 more)
platform/mellanox/wjhd/: CMakeLists.txt
platform/mellanox/wjhd/debian/: changelog  control  files  rules  wjhd.install
platform/mellanox/wjhd/src/: ifnamecache.cpp  ifnamecache.h  main.cpp  netdb.cpp  netdb.h  socket.h  usock.cpp  usock.h  wjhagent.cpp  wjhagent.h  wjhcallback.h  wjhchannel.cpp  wjhchannel.h  wjhcli.cpp  wjhdaemon.cpp  wjhdaemon.h  wjhdmain.cpp  wjhifnamecache.cpp  wjhifnamecache.h  wjhserialize.cpp  wjhserialize.h  wjhtable.cpp  wjhtable.h  wjhtypes.cpp  wjhtypes.h
platform/mellanox/wjhd/wjhpoll/: main.py  wjhtable.py
rules/: config  docker-database.mk  docker-dhcp-relay.mk  docker-fpm-frr.mk  docker-fpm-gobgp.mk  docker-fpm-quagga.mk  docker-iccpd.mk  docker-lldp.mk  docker-nat.mk  docker-orchagent.mk  docker-platform-monitor.mk  docker-restapi.mk  docker-router-advertiser.mk  docker-sflow.mk  docker-snmp.mk  docker-sonic-mgmt-framework.mk  docker-teamd.mk  docker-telemetry.mk  sonic-compatibility-version.mk  sonic-package-manager.dep  sonic-package-manager.mk
sonic-slave-buster/: Dockerfile.j2
sonic-slave-stretch/: Dockerfile.j2
(+299 files in other folders)
